Add markdown cell for cleaning empty cells section

--- a/Self-Learning/Data_cleaning.ipynb
+++ b/Self-Learning/Data_cleaning.ipynb
@@ -12,6 +12,20 @@
     "this is a step towards what is called cleaning data\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0878673",
+   "metadata": {},
+   "source": [
+    "# Cleaning Empty Cells\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b83d140f",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
