Add data cleaning notebooks for handling empty and wrong data formats

--- a/Self-Learning/Data_cleaning.ipynb
+++ b/Self-Learning/Data_cleaning.ipynb
@@ -22,9 +22,112 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b83d140f",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ccdd1de",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "print(pd.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e576e5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.read_csv('DataSet/fitness_data.csv')\n",
+    "new_df=df.dropna()\n",
+    "print(df)\n",
+    "print(new_df.to_string())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92a132db",
+   "metadata": {},
+   "source": [
+    "Note: By default, the dropna() method returns a new DataFrame, and will not change the original.\n",
+    "\n",
+    "If you want to change the original DataFrame, use the inplace = True argument:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55a5dd25",
+   "metadata": {},
+   "source": [
+    "The dropna(inplace = True) will NOT return a new DataFrame, but it will remove all rows containing NULL values from the original DataFrame."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7516579",
+   "metadata": {},
+   "source": [
+    "### dropna() index ke sath hi row ko delete kar deta hai\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "668df23f",
+   "metadata": {},
+   "source": [
+    "# #Filling empty cell with values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04a996ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.fillna(130, inplace=True)\n",
+    "print(df.to_string())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "110ea7ab",
+   "metadata": {},
+   "source": [
+    "### Replace data Using Mean, Median, or Mode\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bdda1cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = df['Pulse'].mean()\n",
+    "new_df = df['Pulse'].fillna(x)\n",
+    "print(new_df.to_string())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "527f8e17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = df[\"Calories\"].mode()[0]\n",
+    "df[\"Calories\"].fillna(x, inplace=True)\n",
+    "print(df.to_string())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da75ef99",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
