learn about the gridding in plotting in matplotlib

--- a/Matplotlib/Labels_Title.ipynb
+++ b/Matplotlib/Labels_Title.ipynb
@@ -52,13 +52,59 @@
    "id": "f79a40eb",
    "metadata": {},
    "source": [
-    "#### We can use the fontdict parameter in xlabel(), ylabel(), and title() to set font properties for the title and labels.\n"
+    "#### We can use the 'fontdict' parameter in xlabel(), ylabel(), and title() to set font properties for the title and labels.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "dea2ba97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X=np.array([11,21,34,42,54])\n",
+    "Y=np.array([52,71,14,46,84])\n",
+    "plt.plot(X,Y)\n",
+    "\n",
+    "plt.title(\"PLOT TITLE\",fontdict={'family':'serif','color':'darkblue','size':15})\n",
+    "plt.xlabel(\"X AXIS LABEL\",fontdict={'family':'serif','color':'blue','size':10})\n",
+    "plt.ylabel(\"Y AXIS LABEL\",fontdict={'family':'serif','color':'red','size':10})\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f1e6a03",
+   "metadata": {},
+   "source": [
+    "Position the Title\n",
+    "\n",
+    "You can use the loc parameter in title() to position the title.\n",
+    "\n",
+    "Legal values are: 'left', 'right', and 'center'. Default value is 'center'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3c065bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X=np.array([11,1,34,2,54])\n",
+    "Y=np.array([52,11,14,6,84])\n",
+    "plt.plot(X,Y)\n",
+    "\n",
+    "plt.title(\"PLOT TITLE\",fontdict={'color':'darkblue','size':15},loc='left')\n",
+    "plt.xlabel(\"X AXIS LABEL\",fontdict={'family':'serif','size':10},loc='center')\n",
+    "plt.ylabel(\"Y AXIS LABEL\",fontdict={'family':'serif','color':'red'},loc='top')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a82503fc",
    "metadata": {},
    "outputs": [],
    "source": []
