--- a/Scikit-Learn/demo.ipynb
+++ b/Scikit-Learn/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "cc3e65f1",
    "metadata": {},
    "outputs": [],
@@ -15,40 +15,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d19b299c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.8.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(sklearn.__version__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b7f86a03",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data = pd.DataFrame({\n",
-    "#     \"age\": [25, 30, None, 45, 50],\n",
-    "#     \"salary\": [50000, 60000, 55000, None, 90000],\n",
-    "#     \"department\": [\"HR\", \"IT\", \"Finance\", \"IT\", \"HR\"],\n",
-    "#     \"target\": [0, 1, 0, 1, 1]\n",
-    "# })"
+    "data = pd.DataFrame({\n",
+    "    \"age\": [25, 30, None, 45, 50],\n",
+    "    \"salary\": [50000, 60000, 55000, None, 90000],\n",
+    "    \"department\": [\"HR\", \"IT\", \"Finance\", \"IT\", \"HR\"],\n",
+    "    \"target\": [0, 1, 0, 1, 1]\n",
+    "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "b9172065",
    "metadata": {},
    "outputs": [],
@@ -70,164 +62,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "5dca2c40",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>survived</th>\n",
-       "      <th>pclass</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>age</th>\n",
-       "      <th>sibsp</th>\n",
-       "      <th>parch</th>\n",
-       "      <th>fare</th>\n",
-       "      <th>embarked</th>\n",
-       "      <th>class</th>\n",
-       "      <th>who</th>\n",
-       "      <th>adult_male</th>\n",
-       "      <th>deck</th>\n",
-       "      <th>embark_town</th>\n",
-       "      <th>alive</th>\n",
-       "      <th>alone</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>male</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8.05</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Third</td>\n",
-       "      <td>man</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>no</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>male</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>263.00</td>\n",
-       "      <td>S</td>\n",
-       "      <td>First</td>\n",
-       "      <td>man</td>\n",
-       "      <td>True</td>\n",
-       "      <td>C</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>no</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>250</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.25</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Third</td>\n",
-       "      <td>man</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>no</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>763</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>female</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>120.00</td>\n",
-       "      <td>S</td>\n",
-       "      <td>First</td>\n",
-       "      <td>woman</td>\n",
-       "      <td>False</td>\n",
-       "      <td>B</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>221</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>male</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>13.00</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Second</td>\n",
-       "      <td>man</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>no</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     survived  pclass     sex   age  sibsp  parch    fare embarked   class  \\\n",
-       "112         0       3    male  22.0      0      0    8.05        S   Third   \n",
-       "27          0       1    male  19.0      3      2  263.00        S   First   \n",
-       "250         0       3    male   NaN      0      0    7.25        S   Third   \n",
-       "763         1       1  female  36.0      1      2  120.00        S   First   \n",
-       "221         0       2    male  27.0      0      0   13.00        S  Second   \n",
-       "\n",
-       "       who  adult_male deck  embark_town alive  alone  \n",
-       "112    man        True  NaN  Southampton    no   True  \n",
-       "27     man        True    C  Southampton    no  False  \n",
-       "250    man        True  NaN  Southampton    no   True  \n",
-       "763  woman       False    B  Southampton   yes  False  \n",
-       "221    man        True  NaN  Southampton    no   True  "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.sample(5)"
    ]
@@ -245,72 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "a72cb281",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "survived         0\n",
-       "pclass           0\n",
-       "sex              0\n",
-       "age              0\n",
-       "sibsp            0\n",
-       "parch            0\n",
-       "fare             0\n",
-       "embarked         2\n",
-       "class            0\n",
-       "who              0\n",
-       "adult_male       0\n",
-       "deck           688\n",
-       "embark_town      2\n",
-       "alive            0\n",
-       "alone            0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "333dc37e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "survived       0\n",
-       "pclass         0\n",
-       "sex            0\n",
-       "age            0\n",
-       "sibsp          0\n",
-       "parch          0\n",
-       "fare           0\n",
-       "embarked       0\n",
-       "class          0\n",
-       "who            0\n",
-       "adult_male     0\n",
-       "deck           0\n",
-       "embark_town    0\n",
-       "alive          0\n",
-       "alone          0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "si1=SimpleImputer(strategy='most_frequent')\n",
     "data[['embarked','deck','embark_town']]=si1.fit_transform(data[['embarked','deck','embark_town']])\n",
@@ -319,211 +105,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "29956063",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>survived</th>\n",
-       "      <th>pclass</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>age</th>\n",
-       "      <th>sibsp</th>\n",
-       "      <th>parch</th>\n",
-       "      <th>fare</th>\n",
-       "      <th>embarked</th>\n",
-       "      <th>class</th>\n",
-       "      <th>who</th>\n",
-       "      <th>adult_male</th>\n",
-       "      <th>deck</th>\n",
-       "      <th>embark_town</th>\n",
-       "      <th>alive</th>\n",
-       "      <th>alone</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>male</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.2500</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Third</td>\n",
-       "      <td>man</td>\n",
-       "      <td>True</td>\n",
-       "      <td>C</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>no</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>female</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>71.2833</td>\n",
-       "      <td>C</td>\n",
-       "      <td>First</td>\n",
-       "      <td>woman</td>\n",
-       "      <td>False</td>\n",
-       "      <td>C</td>\n",
-       "      <td>Cherbourg</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>female</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.9250</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Third</td>\n",
-       "      <td>woman</td>\n",
-       "      <td>False</td>\n",
-       "      <td>C</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>female</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>53.1000</td>\n",
-       "      <td>S</td>\n",
-       "      <td>First</td>\n",
-       "      <td>woman</td>\n",
-       "      <td>False</td>\n",
-       "      <td>C</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>male</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8.0500</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Third</td>\n",
-       "      <td>man</td>\n",
-       "      <td>True</td>\n",
-       "      <td>C</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>no</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   survived  pclass     sex   age  sibsp  parch     fare embarked  class  \\\n",
-       "0         0       3    male  22.0      1      0   7.2500        S  Third   \n",
-       "1         1       1  female  38.0      1      0  71.2833        C  First   \n",
-       "2         1       3  female  26.0      0      0   7.9250        S  Third   \n",
-       "3         1       1  female  35.0      1      0  53.1000        S  First   \n",
-       "4         0       3    male  35.0      0      0   8.0500        S  Third   \n",
-       "\n",
-       "     who  adult_male deck  embark_town alive  alone  \n",
-       "0    man        True    C  Southampton    no  False  \n",
-       "1  woman       False    C    Cherbourg   yes  False  \n",
-       "2  woman       False    C  Southampton   yes   True  \n",
-       "3  woman       False    C  Southampton   yes  False  \n",
-       "4    man        True    C  Southampton    no   True  "
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "e6b16906",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     survived  pclass     sex        age  sibsp  parch     fare embarked  \\\n",
-      "0           0       3    male  22.000000      1      0   7.2500        S   \n",
-      "1           1       1  female  38.000000      1      0  71.2833        C   \n",
-      "2           1       3  female  26.000000      0      0   7.9250        S   \n",
-      "3           1       1  female  35.000000      1      0  53.1000        S   \n",
-      "4           0       3    male  35.000000      0      0   8.0500        S   \n",
-      "..        ...     ...     ...        ...    ...    ...      ...      ...   \n",
-      "886         0       2    male  27.000000      0      0  13.0000        S   \n",
-      "887         1       1  female  19.000000      0      0  30.0000        S   \n",
-      "888         0       3  female  29.699118      1      2  23.4500        S   \n",
-      "889         1       1    male  26.000000      0      0  30.0000        C   \n",
-      "890         0       3    male  32.000000      0      0   7.7500        Q   \n",
-      "\n",
-      "      class    who  adult_male deck  embark_town alive  alone  \n",
-      "0     Third    man        True    C  Southampton    no  False  \n",
-      "1     First  woman       False    C    Cherbourg   yes  False  \n",
-      "2     Third  woman       False    C  Southampton   yes   True  \n",
-      "3     First  woman       False    C  Southampton   yes  False  \n",
-      "4     Third    man        True    C  Southampton    no   True  \n",
-      "..      ...    ...         ...  ...          ...   ...    ...  \n",
-      "886  Second    man        True    C  Southampton    no   True  \n",
-      "887   First  woman       False    B  Southampton   yes   True  \n",
-      "888   Third  woman       False    C  Southampton    no  False  \n",
-      "889   First    man        True    C    Cherbourg   yes   True  \n",
-      "890   Third    man        True    C   Queenstown    no   True  \n",
-      "\n",
-      "[891 rows x 15 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05e1f05b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -542,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.2"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
