Fix seaborn import issue and update notebook

--- a/Seaborn/demo.ipynb
+++ b/Seaborn/demo.ipynb
@@ -10,22 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "05347466",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'seaborn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mseaborn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msns\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'seaborn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
@@ -51,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "dde9f2ca",
    "metadata": {},
    "outputs": [
@@ -87,25 +75,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>25.29</td>\n",
-       "      <td>4.71</td>\n",
-       "      <td>Male</td>\n",
+       "      <th>21</th>\n",
+       "      <td>20.29</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>Female</td>\n",
        "      <td>No</td>\n",
-       "      <td>Sun</td>\n",
+       "      <td>Sat</td>\n",
        "      <td>Dinner</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   total_bill   tip   sex smoker  day    time  size\n",
-       "5       25.29  4.71  Male     No  Sun  Dinner     4"
+       "    total_bill   tip     sex smoker  day    time  size\n",
+       "21       20.29  2.75  Female     No  Sat  Dinner     2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
