--- a/Seaborn/demo.ipynb
+++ b/Seaborn/demo.ipynb
@@ -5,7 +5,8 @@
    "id": "b30a1ae4",
    "metadata": {},
    "source": [
-    "### Seaborn"
+    "### Seaborn\n",
+    "Seaborn is visualization library for statistical graphics plotting in Python"
    ]
   },
   {
@@ -15,8 +16,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import pandas as pd"
    ]
   },
   {
@@ -40,6 +42,49 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "be1b82ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['anagrams',\n",
+       " 'anscombe',\n",
+       " 'attention',\n",
+       " 'brain_networks',\n",
+       " 'car_crashes',\n",
+       " 'diamonds',\n",
+       " 'dots',\n",
+       " 'dowjones',\n",
+       " 'exercise',\n",
+       " 'flights',\n",
+       " 'fmri',\n",
+       " 'geyser',\n",
+       " 'glue',\n",
+       " 'healthexp',\n",
+       " 'iris',\n",
+       " 'mpg',\n",
+       " 'penguins',\n",
+       " 'planets',\n",
+       " 'seaice',\n",
+       " 'taxis',\n",
+       " 'tips',\n",
+       " 'titanic']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# To set dataset in seaborn\n",
+    "sns.get_dataset_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "dde9f2ca",
    "metadata": {},
    "outputs": [
@@ -75,11 +120,11 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>20.29</td>\n",
-       "      <td>2.75</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>No</td>\n",
+       "      <th>61</th>\n",
+       "      <td>13.81</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>Sat</td>\n",
        "      <td>Dinner</td>\n",
        "      <td>2</td>\n",
@@ -89,11 +134,11 @@
        "</div>"
       ],
       "text/plain": [
-       "    total_bill   tip     sex smoker  day    time  size\n",
-       "21       20.29  2.75  Female     No  Sat  Dinner     2"
+       "    total_bill  tip   sex smoker  day    time  size\n",
+       "61       13.81  2.0  Male    Yes  Sat  Dinner     2"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,8 +150,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "261d9b05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>align</th>\n",
+       "      <th>choice</th>\n",
+       "      <th>time</th>\n",
+       "      <th>coherence</th>\n",
+       "      <th>firing_rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>dots</td>\n",
+       "      <td>T1</td>\n",
+       "      <td>-80</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>33.189967</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>dots</td>\n",
+       "      <td>T1</td>\n",
+       "      <td>-80</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>31.691726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>dots</td>\n",
+       "      <td>T1</td>\n",
+       "      <td>-80</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>34.279840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>dots</td>\n",
+       "      <td>T1</td>\n",
+       "      <td>-80</td>\n",
+       "      <td>12.8</td>\n",
+       "      <td>32.631874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>dots</td>\n",
+       "      <td>T1</td>\n",
+       "      <td>-80</td>\n",
+       "      <td>25.6</td>\n",
+       "      <td>35.060487</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  align choice  time  coherence  firing_rate\n",
+       "0  dots     T1   -80        0.0    33.189967\n",
+       "1  dots     T1   -80        3.2    31.691726\n",
+       "2  dots     T1   -80        6.4    34.279840\n",
+       "3  dots     T1   -80       12.8    32.631874\n",
+       "4  dots     T1   -80       25.6    35.060487"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=sns.load_dataset('dots')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70c79e1d",
    "metadata": {},
    "outputs": [],
    "source": []
