Refined distributionn plot

--- a/Seaborn/Relational_plot.ipynb
+++ b/Seaborn/Relational_plot.ipynb
@@ -176,6 +176,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79760b72",
+   "metadata": {},
+   "source": [
+    "- scatter plot"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "e4a8bcd0",
