--- a/Pnadas/data_corelation.ipynb
+++ b/Pnadas/data_corelation.ipynb
@@ -15,15 +15,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "faf4ee05",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Duration  Pulse  Maxpulse  Calories\n",
+      "0          60    110       130     409.1\n",
+      "1          60    117       145     479.0\n",
+      "2          60    103       135     340.0\n",
+      "3          45    109       175     282.4\n",
+      "4          45    117       148     406.0\n",
+      "..        ...    ...       ...       ...\n",
+      "164        60    105       140     290.8\n",
+      "165        60    110       145     300.0\n",
+      "166        60    115       145     310.2\n",
+      "167        75    120       150     320.4\n",
+      "168        75    125       150     330.4\n",
+      "\n",
+      "[169 rows x 4 columns]\n",
+      "\n",
+      "Correlation Matrix:\n",
+      "          Duration     Pulse  Maxpulse  Calories\n",
+      "Duration  1.000000 -0.155408  0.009403  0.922717\n",
+      "Pulse    -0.155408  1.000000  0.786535  0.025121\n",
+      "Maxpulse  0.009403  0.786535  1.000000  0.203813\n",
+      "Calories  0.922717  0.025121  0.203813  1.000000\n",
+      "\n",
+      "Correlation Matrix:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Pulse</th>\n",
+       "      <th>Maxpulse</th>\n",
+       "      <th>Calories</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Duration</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.155408</td>\n",
+       "      <td>0.009403</td>\n",
+       "      <td>0.922717</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pulse</th>\n",
+       "      <td>-0.155408</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.786535</td>\n",
+       "      <td>0.025121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Maxpulse</th>\n",
+       "      <td>0.009403</td>\n",
+       "      <td>0.786535</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.203813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Calories</th>\n",
+       "      <td>0.922717</td>\n",
+       "      <td>0.025121</td>\n",
+       "      <td>0.203813</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Duration     Pulse  Maxpulse  Calories\n",
+       "Duration  1.000000 -0.155408  0.009403  0.922717\n",
+       "Pulse    -0.155408  1.000000  0.786535  0.025121\n",
+       "Maxpulse  0.009403  0.786535  1.000000  0.203813\n",
+       "Calories  0.922717  0.025121  0.203813  1.000000"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df=pd.read_csv('DataSet/data.csv')\n",
+    "df = pd.read_csv('../DataSet/data.csv')\n",
     "print(df)\n",
+    "correlations = df.corr()\n",
+    "print(\"\\nCorrelation Matrix:\")\n",
+    "print(correlations)\n",
     "print(\"\\nCorrelation Matrix:\")\n",
     "df.corr()"
    ]
@@ -75,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.2"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
